# Auto-Minuting

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  local.properties  settings.gradle.kts
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: 4-bugs-automation-whisper-status.md  delete-whisper-regression.md  drive-upload-not-working.md  google-login-no-credentials.md  knowledge-base.md  plaud-link-transcription-hang.md  transcript-minutes-independence.md
.planning/debug/resolved/: audio-share-transcription-fail.md  audiochunker-oom-streaming-decode.md  long-audio-transcription-fail.md  meeting-delete-not-working.md  samsung-text-share-save-fail.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v6.0-REQUIREMENTS.md  v8.0-REQUIREMENTS.md  v8.0-ROADMAP.md  v9.0-REQUIREMENTS.md
.planning/phases/01-poc/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-app-base/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-VERIFICATION.md
.planning/phases/03-audio/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-stt/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-VERIFICATION.md
.planning/phases/05-minutes/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-VERIFICATION.md
.planning/phases/06-pipeline-integration/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/07-ui/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-VERIFICATION.md
.planning/phases/08-foundation/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-CONTEXT.md  08-DISCUSSION-LOG.md  08-RESEARCH.md  08-VERIFICATION.md
.planning/phases/09-samsung-share/: 09-01-PLAN.md  09-01-SUMMARY.md  09-CONTEXT.md  09-DISCUSSION-LOG.md  09-VERIFICATION.md
.planning/phases/10-notebooklm/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-CONTEXT.md  10-DISCUSSION-LOG.md  10-RESEARCH.md  10-VERIFICATION.md  MCP-REVIEW.md
.planning/phases/11-samsung-auto-detect/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-RESEARCH.md  11-SPIKE-DECISION.md  11-VERIFICATION.md
.planning/phases/12-google-oauth/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-PLAN.md  12-02-SUMMARY.md  12-03-PLAN.md  12-RESEARCH.md  12-VERIFICATION.md
.planning/phases/13-plaud-ble/: 13-01-PLAN.md  13-01-SUMMARY.md  13-02-PLAN.md  13-02-SUMMARY.md  13-03-PLAN.md  13-RESEARCH.md  13-VERIFICATION.md
.planning/phases/14-plaud-protocol/: 14-01-PLAN.md  14-01-SUMMARY.md  14-02-PLAN.md  14-02-SUMMARY.md  14-CONTEXT.md  14-DISCUSSION-LOG.md  14-RESEARCH.md
.planning/phases/15-manual-minutes/: 15-01-PLAN.md  15-01-SUMMARY.md  15-02-PLAN.md  15-02-SUMMARY.md
.planning/phases/16-file-delete/: 16-01-PLAN.md  16-01-SUMMARY.md
.planning/phases/17-ui-cleanup/: 17-01-PLAN.md  17-01-SUMMARY.md
.planning/phases/18-oauth-fix/: 18-01-PLAN.md  18-01-SUMMARY.md
.planning/phases/19-/: 19-01-PLAN.md  19-01-SUMMARY.md  19-CONTEXT.md
.planning/phases/20-/: 20-01-PLAN.md  20-01-SUMMARY.md  20-VERIFICATION.md
.planning/phases/24-/: 24-01-SUMMARY.md  24-VERIFICATION.md
.planning/phases/24-transcript-card-info/: 24-01-PLAN.md
.planning/phases/25-/: 25-01-PLAN.md  25-01-SUMMARY.md  25-VERIFICATION.md
.planning/phases/26-/: 26-01-PLAN.md  26-01-SUMMARY.md  26-02-PLAN.md  26-02-SUMMARY.md  26-VERIFICATION.md
.planning/phases/27-/: 27-01-PLAN.md  27-01-SUMMARY.md  27-VERIFICATION.md
.planning/phases/28-/: 28-01-PLAN.md  28-01-SUMMARY.md  28-VERIFICATION.md
.planning/phases/29-/: 29-01-PLAN.md  29-01-SUMMARY.md
.planning/phases/30-/: 30-01-PLAN.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
app/: build.gradle.kts
app/libs/: README.txt
app/src/main/cpp/: CMakeLists.txt  ggml-vulkan-stub.cpp  whisper_jni.cpp
app/src/main/cpp/vulkan-shaders/: abs.comp.cpp  acc.comp.cpp  add.comp.cpp  add1.comp.cpp  add_id.comp.cpp  arange.comp.cpp  argmax.comp.cpp  argsort.comp.cpp  argsort_large.comp.cpp  ceil.comp.cpp  clamp.comp.cpp  concat.comp.cpp  contig_copy.comp.cpp  conv2d_dw.comp.cpp  conv2d_mm.comp.cpp  conv_transpose_1d.comp.cpp  copy.comp.cpp  copy_from_quant.comp.cpp  copy_to_quant.comp.cpp  copy_transpose.comp.cpp  cos.comp.cpp  count_equal.comp.cpp  count_experts.comp.cpp  cumsum.comp.cpp  cumsum_multipass1.comp.cpp  cumsum_multipass2.comp.cpp  dequant_f32.comp.cpp  dequant_iq1_m.comp.cpp  dequant_iq1_s.comp.cpp  dequant_iq2_s.comp.cpp  dequant_iq2_xs.comp.cpp  dequant_iq2_xxs.comp.cpp  dequant_iq3_s.comp.cpp  dequant_iq3_xxs.comp.cpp  dequant_iq4_nl.comp.cpp  dequant_iq4_xs.comp.cpp  dequant_mxfp4.comp.cpp  dequant_q2_k.comp.cpp  dequant_q3_k.comp.cpp  dequant_q4_0.comp.cpp  (+104 more)
docs/: MANUAL.md  QUICK_START.md  generate_pdf.py
gradle/: libs.versions.toml
poc/minutes-test/: README.md  gemini-api-test.md  gemini-test.py  notebooklm-mcp-test.md  sample-transcript.txt
poc/plaud-analysis/: README.md  apk-analysis.md  cloud-api-test.py  sdk-evaluation.md
poc/results/: DECISION-SUMMARY.md  POC-01-plaud.md  POC-02-galaxy-ai.md  POC-03-stt-fallback.md  POC-04-notebooklm.md
poc/stt-test/: README.md  galaxy-ai-investigation.md  mlkit-evaluation.md  whisper-evaluation.md
(+259 files in other folders)
